Layout issues

--- a/src/app/day-time-slot/day-time-slot.component.sass
+++ b/src/app/day-time-slot/day-time-slot.component.sass
@@ -1,14 +1,18 @@
 .day-time-slot
   width: 100%
   height: 50px
-  border-bottom: .5px solid #C8C4C3
-  position: relative
+  display: flex
+  justify-content: flex-start
 
-  & > div
-    position: absolute
-    font-size: .8rem
+  & > div.time-slot
+    height: 100%
+    padding-left: 10px
+    width: 100px
+    border-right: 1px solid #C8C4C3
 
-  & > div.start-time
-    top: -5px
-    left: -50px
+    & > div
+      transform: translate(0, -5px)
 
+  & > div.events
+    width: calc(100% - 100px)
+    border-bottom: .5px solid #C8C4C3
