--- a/src/app/day-view/day-view.component.sass
+++ b/src/app/day-view/day-view.component.sass
@@ -8,24 +8,28 @@ $accent-color: #e91e63
   & > header.day-header
     height: 10%
     width: 100%
-    padding: 10px
-    border-bottom: .5px solid #C8C4C3
+    // padding: 10px
+    display: flex
+
+    & > .fab-action
+      width: 100px
+      height: 100%
+      border-right: .5px solid #C8C4C3
 
     & > .current-day
-      position: relative
+
       height: 100%
-      width: 100px
-      left: 50px
+      width: calc(100% - 100px)
+      border-bottom: .5px solid #C8C4C3
+      display: flex
+      align-items: center
 
-      & > div
-        text-align: center
+      & > h1
+        box-sizing: border-box
         color: $accent-color
-
-      & > .day
-        font-size: .9rem
-      & > .date
-        margin-top: 10px
+        margin-left: 10px
         font-size: 2rem
+        margin-bottom: 0
 
 // day-view
 main.day-calendar
